--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "clsx": "^2.1.1",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.1",
+    "framer-motion": "^12.5.0",
     "lucide-react": "^0.482.0",
     "next": "13.5.1",
     "next-themes": "^0.4.6",
